--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@ __pycache__/
 
 # Test temp artifacts
 tests/.tmp/
+
+# Frontend source lib folder must be tracked
+!02_frontend/src/lib/
+!02_frontend/src/lib/*.ts
