Stage 5: Remote tester harness + CI gates (#5)
* stage1: docs scaffolding, audit script, and ignore/ci baseline

* stage1: add backend/frontend folder placeholders for audit

* stage2: centralize config and remove hardcoded backend paths

* stage3: frontend stability guards for dashboard, layout, and deletion sync

* stage4: modular providers/adapters and class-based backend resources

* stage5: add remote tester harness, smoke tests, ci gates, rollback runbook

* stage5: track frontend src/lib alias modules for CI typecheck

* perf+mask: edge-preserving mask refinement and fail-fast model loading

* frontend: decompose into services, hooks, and reusable UI modules

* Update docs to current state and fix run_viz thumbnail/delete graph sync

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,10 @@ __pycache__/
 !00_data/vectors/
 00_data/vectors/*
 !00_data/vectors/.gitkeep
+
+# Test temp artifacts
+tests/.tmp/
+
+# Frontend source lib folder must be tracked
+!02_frontend/src/lib/
+!02_frontend/src/lib/*.ts
